--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "discord-bot-dashboard",
   "version": "0.0.1",
   "description": "A tool for Discord.js bot developers to manage their bot for development and final release usages.",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
-    "start": "nodemon discord-bot-sourcefiles/main.js"
+    "start": "nodemon main.js"
   },
   "repository": {
     "type": "git",
@@ -20,15 +20,38 @@
   ],
   "homepage": "https://github.com/julianYaman/discord-bot-dashboard#readme",
   "dependencies": {
+    "better-sqlite-pool": "^0.2.2",
     "body-parser": "^1.19.0",
+    "canvas": "^2.6.0",
+    "canvas-constructor": "^3.1.0",
     "chalk": "latest",
-    "discord.js": "^11.4.2",
-    "express": "^4.17.1",
-    "ejs": "^2.7.1",
-    "nodemon": "^1.19.2",
-    "express-session": "^1.16.2",
+    "common-tags": "^1.8.0",
+    "cookie-parser": "~1.4.4",
+    "debug": "^2.6.9",
+    "discord-embedbuilder": "^2.3.1",
+    "discord.js": "^11.5.1",
+    "discordjs-prompter": "^1.3.1",
+    "ejs": "^2.6.2",
+    "enmap": "^5.1.2",
+    "express": "^4.16.4",
+    "express-handlebars": "^3.1.0",
+    "express-session": "^1.17.0",
+    "form-data": "^2.5.1",
+    "hex-to-rgba": "^2.0.1",
+    "http-errors": "^1.6.3",
     "jquery": "^3.4.1",
+    "morgan": "~1.9.1",
+    "node-fetch": "^2.6.0",
+    "nodemon": "^1.19.3",
+    "passport": "^0.4.0",
+    "passport-discord": "^0.1.3",
+    "passport-oauth2": "^1.5.0",
+    "path": "^0.12.7",
     "performance-now": "^2.1.0",
-    "socket.io": "^2.2.0"
+    "r2": "^2.0.1",
+    "replace": "^1.1.1",
+    "slot-machine": "^2.1.0",
+    "socket.io": "^2.2.0",
+    "url": "^0.11.0"
   }
 }
