--- a/config.json
+++ b/config.json
@@ -9,9 +9,9 @@
       "goodbye": "Goodbye {member}! We understand you have to continue that journey to bigger and better regions!"
   },
   "port": 3000,
-  "token": "your token here",
-  "clientID": "your client id",
-  "clientsecret": "your secret,
+  "token": "NjI1NzQzODYzNDI4MDIyMjcy.XapwUg.bxBRAEsZM-PMgtDFao6h5bowgaQ",
+  "clientID": "625743863428022272",
+  "clientsecret": "OQ6LfR7dZQgVrG6rPvyxzhKkwN3zm53e",
   "paths": {
       "commands": "./commands",
       "events": "./events"
@@ -22,8 +22,8 @@
       "lvlup": "<:mariolevelup:628002543884042281>"
   },
   "apikeys": {
-      "dog": "your api key",
-      "cat": "your api key"
+      "dog": "abdb725d-d2fd-4a3b-ab92-004af73e57bc",
+      "cat": "abdb725d-d2fd-4a3b-ab92-004af73e57bc"
   },
   "colors": {
       "red": "#e3847f",
