--- a/config.json
+++ b/config.json
@@ -22,8 +22,8 @@
       "lvlup": "<:mariolevelup:628002543884042281>"
   },
   "apikeys": {
-      "dog": "abdb725d-d2fd-4a3b-ab92-004af73e57bc",
-      "cat": "abdb725d-d2fd-4a3b-ab92-004af73e57bc"
+      "dog": "your key",
+      "cat": "your key"
   },
   "colors": {
       "red": "#e3847f",
