--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A tool for Discord.js bot developers to manage their bot for development and final release usages.",
   "main": "main.js",
   "scripts": {
-    "start": "nodemon main.js"
+    "start": "nodemon --ignore sessions/ main.js"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,7 @@
     "chalk": "latest",
     "common-tags": "^1.8.0",
     "cookie-parser": "~1.4.4",
+    "cookie-session": "^1.3.3",
     "debug": "^2.6.9",
     "discord-embedbuilder": "^2.3.1",
     "discord.js": "^11.5.1",
@@ -37,6 +38,7 @@
     "express-handlebars": "^3.1.0",
     "express-session": "^1.17.0",
     "form-data": "^2.5.1",
+    "helmet": "^3.21.1",
     "hex-to-rgba": "^2.0.1",
     "http-errors": "^1.6.3",
     "jquery": "^3.4.1",
@@ -50,8 +52,10 @@
     "performance-now": "^2.1.0",
     "r2": "^2.0.1",
     "replace": "^1.1.1",
+    "session-file-store": "^1.3.1",
     "slot-machine": "^2.1.0",
     "socket.io": "^2.2.0",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "uuid": "^3.3.3"
   }
 }
