--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "discord-bot-dashboard",
   "version": "0.0.1",
   "description": "A tool for Discord.js bot developers to manage their bot for development and final release usages.",
-  "main": "main.js",
   "scripts": {
+    "logs": "jest",
     "start": "nodemon main.js"
+  },
+  "nodemonConfig": {
+    "ignore": [
+      "logs/*"
+    ]
   },
   "repository": {
     "type": "git",
@@ -26,8 +31,6 @@
     "canvas-constructor": "^3.1.0",
     "chalk": "latest",
     "common-tags": "^1.8.0",
-    "cookie-parser": "~1.4.4",
-    "cookie-session": "^1.3.3",
     "debug": "^2.6.9",
     "discord-embedbuilder": "^2.3.1",
     "discord.js": "^11.5.1",
@@ -42,7 +45,6 @@
     "hex-to-rgba": "^2.0.1",
     "http-errors": "^1.6.3",
     "jquery": "^3.4.1",
-    "morgan": "~1.9.1",
     "node-fetch": "^2.6.0",
     "nodemon": "^1.19.3",
     "passport": "^0.4.0",
@@ -52,10 +54,10 @@
     "performance-now": "^2.1.0",
     "r2": "^2.0.1",
     "replace": "^1.1.1",
-    "session-file-store": "^1.3.1",
     "slot-machine": "^2.1.0",
     "socket.io": "^2.2.0",
     "url": "^0.11.0",
-    "uuid": "^3.3.3"
+    "util": "^0.12.1",
+    "winston": "^3.2.1"
   }
 }
