--- a/config.json
+++ b/config.json
@@ -9,9 +9,9 @@
       "goodbye": "Goodbye {member}! We understand you have to continue that journey to bigger and better regions!"
   },
   "port": 3000,
-  "token": "NjM1NjY2MDcxODkzOTY2ODc4.Xa2zbw.7tjLfM2e-IGcZcDhSaWGkMBLg_8",
-  "clientID": "635666071893966878",
-  "clientsecret": "0Hska6M6wYG85Z_xB9ox0EGQZ5jRTmtX",
+  "token": "",
+  "clientID": "",
+  "clientsecret": "",
   "paths": {
       "commands": "./commands",
       "events": "./events"
